# E-CLI

./: .gitignore  IMPLEMENTATION_SUMMARY.md  LICENSE  QUICKSTART.md  README.md  RELEASE_NOTES.md  pyproject.toml
.github/workflows/: ci.yml
docs/: MIGRATION_GUIDE.md  PROJECT_SUMMARY.md  README-structure.md  README.md  SHELL_COMPLETION.md  USAGE_EXAMPLES.md  architecture.md  bundled-runtime.md  connected-mode.md  offline-mode.md  safety-model.md  skill-authoring.md  troubleshooting.md
examples/skills/docker-helper/: skill.py  skill.yaml
examples/skills/git-helper/: README.md  skill.py  skill.yaml
examples/skills/npm-helper/: skill.py  skill.yaml
examples/skills/python-helper/: skill.py  skill.yaml
examples/skills/system-info/: skill.py  skill.yaml
scripts/: bootstrap_install.ps1  bootstrap_install.sh  install_ecli.py
scripts/completions/: _e-cli  e-cli-completion.bash  e-cli.fish
src/e_cli/: __init__.py  __main__.py  cli.py  config.py  logging.py
src/e_cli/agent/: loop.py  protocol.py
src/e_cli/commands/: __init__.py  skills_commands.py  wiki_commands.py  (+1 more)
tests/: README.md  __init__.py  conftest.py  test_agent_loop.py  test_anthropic_client.py  test_browser_tool.py  test_bundled_provider.py  test_cli_commands.py  test_config.py  test_curl_tool.py  test_discovery.py  test_doc_indexer.py  test_factory_and_router.py  test_file_tool.py  test_helper_assets.py  test_helper_runtime.py  test_logging_and_main.py  test_mcp_bridge.py  test_memory_store.py  test_playwright_tool.py  test_protocol.py  test_providers.py  test_rag_tool.py  test_safety_policy.py  test_shell_tool.py  test_skill_executor.py  test_skills_cli.py  test_ssh_tool.py  test_sub_agent_hardware.py  test_sub_agent_integration.py  test_sub_agent_models.py  test_sub_agent_pool.py  test_sub_agent_skill.py  test_system_tool.py  test_tui.py  test_ui_and_approval.py
tests/integration/: test_rag_wiki_integration.py  test_workflow_integration.py
tests/unit/: test_skills_base.py  test_skills_registry.py  test_wiki_page.py  test_workflow_manager.py
workflows/: analyze-codebase.yaml  code-review-prep.yaml  deploy-nodejs-app.yaml  setup-python-project.yaml  system-diagnostics.yaml
(+72 files in other folders)
